clusters/app.ci/prow/03_deployment/boskos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boskos
  namespace: ci
  labels:
    app: prow
    component: boskos
  annotations:
    keel.sh/policy: force
    keel.sh/matchTag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 5m"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prow
      component: boskos
  template:
    metadata:
      labels:
        app: prow
        component: boskos
      namespace: ci
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: component
                  operator: In
                  values:
                  - boskos
              topologyKey: "kubernetes.io/hostname"
      serviceAccountName: boskos
      terminationGracePeriodSeconds: 30
      containers:
      - image: quay-proxy.ci.openshift.org/openshift/ci:ci_nginx-unprivileged_stable
        name: boskos
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
      - args:
        - -provider=openshift
        - -https-address=:8082
        - -http-address=
        - -email-domain=*
        - -upstream=http://localhost:8080
        - -htpasswd-file=/etc/proxy/htpasswd/ci.htpasswd
        - -pass-basic-auth=false
        - -tls-cert=/etc/tls/private/tls.crt
        - -tls-key=/etc/tls/private/tls.key
        - -client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token
        - -cookie-secret-file=/etc/proxy/secrets/session_secret
        - '-openshift-sar={"resource": "namespaces", "verb": "get"}'
        - '-openshift-delegate-urls={"/": {"resource": "namespaces", "verb": "get"}}'
        - -openshift-service-account=boskos
        - -openshift-ca=/etc/pki/tls/cert.pem
        - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        image: quay.io/openshift/origin-oauth-proxy:4.16
        name: boskos-proxy
        ports:
        - containerPort: 8082
          name: https
        readinessProbe:
          tcpSocket:
            port: https
        resources: {}
        volumeMounts:
        - mountPath: /etc/proxy/htpasswd
          name: secret-boskos-htpasswd
        - mountPath: /etc/tls/private
          name: secret-boskos-tls
        - mountPath: /etc/proxy/secrets
          name: secret-boskos-proxy
      volumes:
        - name: secret-boskos-htpasswd
          secret:
            secretName: boskos-credentials
            items:
            - key: ci.htpasswd
              path: ci.htpasswd
        - name: secret-boskos-proxy
          secret:
            secretName: boskos-proxy
        - name: secret-boskos-tls
          secret:
            secretName: boskos-tls
        - name: config
          configMap:
            name: boskos-forward-config
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: boskos-tls
  labels:
    app: prow
    component: boskos
  name: boskos
  namespace: ci
spec:
  selector:
    app: prow
    component: boskos
  ports:
  - name: https
    port: 8082
    protocol: TCP
    targetPort: 8082
  - name: default
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    #https://docs.openshift.com/container-platform/3.11/architecture/networking/routes.html#env-variables
    #default is 30s
    #before figuring out why it takes so long, we set this up to work it around
    haproxy.router.openshift.io/timeout: 1000s
  name: boskos
  namespace: ci
spec:
  port:
    targetPort: 8082
  to:
    kind: Service
    name: boskos
  wildcardPolicy: None
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
